# weather-forecaster

./: Cargo.toml  README.md  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: rust_ci.yml
custom-fonts/: cloud24.c  cloud24.h
lvgl-configs/: lv_conf.h
sdcard_files/: CITIES.TXT  KEY.TXT  WIFI.TXT
src/: cities_settings_pane.rs  file_store.rs  forecast_weather_api.rs  home_pane.rs  lcd_panel.rs  lvgl_misc.rs  main.rs  model.rs  navigation_pane.rs  startup_pane.rs  ui.rs  wifi_settings_pane.rs
